src/test/deca/context/invalid/obtained_res/declObjetcont.res
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:40) - verify program: start
DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:43) - verify listClass: start
./src/test/deca/context/invalid/created/testPass1/declObjet.deca:7:0: DoubleClassDeclarationException: Class names must be unique. You have declared the class Object more than once. 
